# opan5510-finalproject

./: .gitignore  README.md  final_project.ipynb  pyproject.toml
data/: Customers.csv
